# aoc2021

./: puzzle-1.py  puzzle-10-1.py  puzzle-2-2.py  puzzle-2.py  puzzle-3-1.py  puzzle-3-2.py  puzzle-4-1.py  puzzle-4-2.py  puzzle-5-1.py  puzzle-6-1.py  puzzle-6-2.py  puzzle-7-1.py  puzzle-7-2.py  puzzle-8-1.py  puzzle-8-2.py  puzzle-9-1.py  puzzle-9-2.py  puzzle-input-10.txt  pyproject.toml
