[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Alex Nicol <nicol.alexandre1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
